# probtp-poc-app

./: .firebaserc  .gitignore  README.md  SCHEMA_FEATURE_SUMMARY.md  firebase.json  firestore.rules
backend/: Dockerfile  README.md  cors.json  probtp_poc.db  pyproject.toml  requirements.txt  test_db_connection.py
backend/app/: __init__.py  main.py
backend/app/api/: api_models.py  deps.py  errors.py  files.py  health.py  parsing.py  projects.py  schemas.py
backend/app/core/: config.py  database.py  logging.py  storage.py
backend/app/models/: __init__.py  base.py  bounding_box.py  content_block.py  content_block_db.py  file.py  parsed_document.py  parsing_configuration.py  parsing_request.py  project.py  project_member.py  schema.py
backend/app/schemas/: project_schemas.py  schema_schemas.py
backend/app/services/: ai_schema_service.py  auth_service.py  content_block_service.py  project_service.py  schema_service.py  storage_service.py
backend/app/services/parsing/: __init__.py  service.py  validation.py
backend/app/services/parsing/adapters/: __init__.py  base.py  mistral_ocr.py
backend/app/utils/: README.md  __init__.py  crud_repository.py  db_session.py  examples.py  query_builder.py  quick_reference.md  transaction_manager.py
backend/explorations/files_upload/: filestorage_access.py  login_to_backend.py  test_storage_service.py
backend/explorations/parsers/: parse_documents_docling.py  parse_documents_pymupdf.py  parse_documents_pymupdf4llm.py  test_docling_simple.py  test_pymupdf_simple.py
backend/explorations/parsers/parsers_evaluation/: README_evaluation_report.md  ai_report_utils.py  evaluate_pipelines.py  evaluation_report.py  excel_utils.py  metrics_utils.py  parse_documents.py
backend/explorations/parsers/parsers_evaluation/archives/: extend_llm_postprocessing_01.json  extend_llm_postprocessing_01_pro.json  extend_solo.json  mistral_ocr_solo.json  pymupdf4llm_solo.json
backend/explorations/parsers/parsers_evaluation/eval_data/: Define and Set up minimal end-to-end.md  convert_to_json.py  data_0.json  data_0.jsonl
backend/explorations/parsers/parsers_evaluation/output/evals/: extend_llm_postprocessing_pymupdf_claude_sonnet_4_5.json  extend_llm_postprocessing_pymupdf_gemini_flash.json  extend_solo.json  mistral_ocr_solo.json  pulse_solo.json  pymupdf4llm_solo.json  vqa_gemini_flash.json  vqa_gemini_flash_latest.json  vqa_gemini_pro.json
backend/explorations/parsers/parsers_evaluation/output/extend_llm_postprocessing_pymupdf_claude_sonnet_4_5/: File #1 - Laurent M - Conditions particulières - Socle AXA - SAE.json  File #1 - Laurent M - Conditions particulières - Socle AXA - SAE.md  File #2 - Laurent M - tableau garantie fm 2025 word.json  File #2 - Laurent M - tableau garantie fm 2025 word.md
backend/explorations/parsers/parsers_evaluation/output/extend_llm_postprocessing_pymupdf_gemini_flash/: File #1 - Laurent M - Conditions particulières - Socle AXA - SAE.json  (+3 more)
backend/explorations/parsers/parsers_evaluation/parsing_pipelines/: __init__.py  extend_llm_postprocessing_pymupdf_claude_sonnet_4_5.py  extend_llm_postprocessing_pymupdf_gemini_flash.py  extend_llm_postprocessing_pymupdf_gemini_pro.py  extend_solo.py  landing_ai_enhanced_old.py  landing_ai_solo.py  landing_ai_xtd.py  landing_enhanced.md  llamaparse_llm_postprocessing_pymupdf_claude_sonnet_4_5.py  mistral_ocr_solo.py  pulse_solo.py  pymupdf4llm_solo.py  pymupdf_lock.py
backend/explorations/parsers/parsers_evaluation/report_generation/: STRUCTURE.md  implementation_plan.md  new_alignment_table_schema.md  temp_schema_comparison.py  test_bbox_conversion.py  test_pipeline_bbox.py  visualize_comparison.py
backend/explorations/parsers/parsers_evaluation/vqa_pipelines/: README.md  __init__.py  vqa_gemini_flash.py  vqa_gemini_flash_preview.py  vqa_gemini_pro.py  vqa_sonnet_4_5.py
backend/explorations/report_generation/: 00_config_and_setup.py  01_upload_files.py  02_read_and_parse_file.py  02_z_evaluate_the_parsing.py  03_single_shot_report.py  03t01query_content_blocks.py  03z01_optional_Identify_the_dimensions.py  04_export_content_blocks.py  GCP_Setup_Instructions.md  README.md
backend/explorations/report_generation/credentials/: sql.txt
backend/explorations/report_generation/prompts/: final_reports.md
backend/tests/: test_storage_service.py
backend/tests/contract/: __init__.py  test_parsing_parse.py  test_parsing_services.py  test_parsing_validate.py
backend/tests/integration/: test_file_upload_flow.py  test_llamaparse_integration.py  test_mistral_ocr_integration.py  test_service_switching.py  test_unstructured_io_integration.py
docs/: setup.md
(+349 files in other folders)
