[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probtp-backend"
version = "0.1.0"
description = "PRO BTP Benefits Comparison POC Backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Cube5 AI Team", email = "jb.renault@cube5.ai"},
]

dependencies = [
    "fastapi==0.116.2",
    "uvicorn[standard]==0.35.0",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
    "pydantic==2.10.0",
    "sqlalchemy[mypy]==2.0.36", # Include mypy extra in main dep
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "google-cloud-storage==3.1.1",
    "google-auth==2.40.3",
    "firebase-admin==7.1.0",
    "structlog==24.4.0",
    "requests==2.32.5",
    "httpx>=0.28.1",
    "google-genai>=1.39.0",
    "langfuse>=3.5.1",
    "openinference-instrumentation-google-genai>=0.1.5",
    "docling>=2.7.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "docling-core>=2.4.0",
    "mlx>=0.29.2",
    "mlx-vlm>=0.3.3",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.32.0",
    "types-psycopg2>=2.9.0",
    "sqlalchemy[mypy]>=2.0.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.28.1",  # for testing async endpoints
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.32.0",
    "types-psycopg2>=2.9.0",
    "sqlalchemy[mypy]>=2.0.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions/*.py",
    "venv",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005"]
"explorations/**/*.py" = ["E402", "F401"]  # Allow module imports not at top and unused imports for exploration scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Third-party imports
ignore_missing_imports = true

# Specific module configurations
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "google.*",
    "firebase_admin.*",
    "structlog.*",
    "psycopg2.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
